# libquicktime

./: .cvsignore  .gitignore  ChangeLog  Doxyfile  Makefile.am  README  README.hvirtual  TODO  acinclude.m4  atom.c  autogen.sh  cmodel_default.c  cmodel_permutation.h  cmodel_yuv420p.c  codecs.c  colormodels.c  configure.ac  configure.in  cpuinfo.sh  cvs_clean.sh  divx.c  funcprotos.h  jpeg_old.h  libdv.c  libmjpeg.h  libquicktime.pc.in  libquicktime.spec  libquicktime.spec.in  lqt-config.in  lqt.m4  lqt_codecfile.c  lqt_codecinfo.c  lqt_codecinfo.h  lqt_codecinfo_private.h  lqt_codecs.c  lqt_funcprotos.h  lqt_loader.c  lqt_plugin.c  lqt_quicktime.c  make_potfiles  (+14 more)
debian/: Makefile.am  README.Debian  changelog  control  copyright  docs  libquicktime-dev.dirs  libquicktime-dev.install  libquicktime-plugin-configurator.install  libquicktime-plugin-ffmpeg.install  libquicktime-plugin-jpeg.install  libquicktime-plugin-lame.install  libquicktime-plugin-opendivx.install  libquicktime-plugin-png.install  libquicktime-plugin-vorbis.install  libquicktime-progs.install  libquicktime0-dev.dirs  libquicktime0-dev.docs  libquicktime0-dev.install  libquicktime0.dirs  libquicktime0.install  libquicktime0.manpages  rules  shlibs.local
doc/: .cvsignore  Doxyfile  Makefile.am  api_usage.html  codecs.html  hackersguide.txt  mainpage.incl
include/: Makefile.am  atom.h  charset.h  cmodel_default.h  cmodel_permutation.h  cmodel_yuv420p.h  cmodel_yuv422.h  colormodels.h  colorspace_macros.h  colorspace_tables.h  ctab.h  dinf.h  dref.h  edts.h  elst.h  funcprotos.h  graphics.h  hdlr.h  lqt_codecinfo.h  lqt_codecinfo_private.h  lqt_fseek.h  lqt_funcprotos.h  lqt_plugin.h  lqt_private.h  lqt_quicktime.h  matrix.h  mdat.h  mdhd.h  mdia.h  minf.h  moov.h  mvhd.h  plugin.h  ptscache.h  quicktime.h  smhd.h  stbl.h  stco.h  stsc.h  stsd.h  (+10 more)
include/quicktime/: .cvsignore  Makefile.am  colormodels.h  compression.h  lqt.h  lqt1394_config.h.in  lqt_atoms.h  lqt_codecapi.h  lqt_codecinfo.h  lqt_qtvr.h  lqt_version.h.in  qtprivate.h  quicktime.h  version.h  version.h.in
m4/: ChangeLog  Makefile.am  Makefile.am~  avcodec.m4  po.m4
plugins/: Makefile.am
plugins/audiocodec/: Makefile.am  alaw_tables.h  audiocodec.h  ima4.c  ima4.h  lqt_audio.la  lqt_audiocodec.c  pcm.c  pcm.h  rawaudio.c  rawaudio.h  twos.c  twos.h  ulaw.c  ulaw.h  ulaw_tables.h
plugins/dv/: Makefile.am  dv.c  dv.h  libdv.c  libdv.h  lqt_dv.c
plugins/faac/: Makefile.am  faac.c  lqt_faac.c  qtfaac.h
plugins/faad2/: Makefile.am  faad2.c  faad2.h  lqt_faad2.c
plugins/ffmpeg/: Makefile.am  audio.c  ffmpeg.c  ffmpeg.h  lqt_ffmpeg.c  params.c  params.h  video.c
plugins/lame/: Makefile.am  lame_codec.c  lame_codec.h  lqt_lame.c
plugins/mjpeg/: Makefile.am  jpeg.c  jpeg.h  libmjpeg.c  libmjpeg.h  lqt_mjpeg.c
plugins/png/: Makefile.am  lqt_png.c  qtpng.c  qtpng.h
plugins/rtjpeg/: Makefile.am  RTjpeg.c  RTjpeg.h  lqt_rtjpeg.c  mmx.h  rtjpeg.c  rtjpeg.h  rtjpeg_codec.c  rtjpeg_codec.h
plugins/schroedinger/: Makefile.am  extract_settings.c  lqt_schroedinger.c  schroedinger.c  schroedinger.h  schroedinger_decode.c  schroedinger_encode.c
plugins/videocodec/: Makefile.am  lqt_video.la  lqt_videocodec.c  raw.c  v210.c  v210.h  v308.c  v308.h  v408.c  v408.h  v410.c  v410.h  videocodec.c  videocodec.h  yuv2.c  yuv2.h  yuv4.c  yuv4.h  yv12.c  yv12.h
plugins/vorbis/: Makefile.am  lqt_vorbis.c  qtvorbis.h  vorbis.c
plugins/x264/: Makefile.am  lqt_x264.c  qtx264.h  x264.c
po/: .cvsignore  ChangeLog  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  de.gmo  de.po  libquicktime.pot
src/: Makefile.am  atom.c  audio.c  avi_avih.c  avi_guid.c  avi_hdrl.c  avi_idx1.c  avi_indx.c  avi_info.c  avi_ix.c  avi_movi.c  avi_odml.c  avi_riff.c  avi_strf.c  avi_strh.c  avi_strl.c  bframe_detector.c  chan.c  charset.c  clap.c  cmodel_default.c  cmodel_yuv420p.c  cmodel_yuv422.c  codecs.c  colormodels.c  colr.c  compression.c  ctab.c  ctts.c  dinf.c  dref.c  edts.c  elst.c  enda.c  esds.c  fiel.c  frma.c  ftab.c  ftyp.c  gama.c  (+74 more)
utils/: Makefile.am  common.c  common.h  cpuinfo.c  dechunk.c  dump.c  dump_codecs.c  gen_colorspace_tables.c  lqt_transcode.c  lqtplay.1  lqtplay.c  lqtremux.c  lqtvrplay.c  qt2text.c  qtinfo.c  qtstreamize.c  rechunk.c  recover.c  test_codec.c  testqt.c  yuv4toyuv.c
utils/gtk/: Makefile.am  libquicktime_config.c  lqt_gtk.c  lqt_gtk.h
